--- a/index.html
+++ b/index.html
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Greeting App</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="container">
-    <h1>Greeting App</h1>
-    <input type="text" id="nameInput" placeholder="Enter your name">
-    <button onclick="sayHello()">Greet Me</button>
-    <p id="greeting"></p>
-  </div>
-  <script src="script.js"></script>
-</body>
+<!doctype html>
+<html>
+  <head><meta charset="utf-8"><title>Simple Web App</title></head>
+  <body>
+    <h1>Hello from Piyush Jha</h1>
+    <p>Repo: https://github.com/Piyushjha1806/Simple-web-app</p>
+  </body>
 </html>
